Mail service API, footer, social link, bug0fix

--- a/src/main.html
+++ b/src/main.html
@@ -59,7 +59,11 @@
           <div>
             <img src="../resources/Images/mypic.png" alt="MyPicDidNotLoad:( " class="mypic">
           </div>
-          <p class="nametag">a developer.</p>
+          <div class="nametag">a developer.</div>
+          <div class="content-center">
+            <a class="anc" href="https://github.com/AT-GUPTA"><i class="bi bi-github" style="font-size:45px;"></i></a>&nbsp&nbsp&nbsp&nbsp&nbsp
+            <a class="anc" href="https://www.linkedin.com/in/atul-curious-gupta/"><i class="bi bi-linkedin" style="font-size:45px;"></i></a>
+          </div>
           <div class="my-3 alltext">
             I am a computer science student at Concordia University with a passion for software development, Artificial
             Intelligence, and cloud computing. I am constantly seeking new opportunities to learn and grow, and have
@@ -67,6 +71,7 @@
             ability to grasp new concepts. I bring meticulous attention to detail, dedication, enthusiasm, and diligence
             to my work.
           </div>
+          
 
         </div>
       </div>
@@ -402,13 +407,12 @@
 
   <!-- Contact -->
   <section id="contact">
-    <div style="width: auto;">
+    <div>
       <div class="container-fluid row py-5">
         <div class="display-5 pt-3"><span class="custom-head">Contact Me</span></div>
         <div class="form-container">
           <div class="lead text-white mt-4 fs-5">
-            I’m interested in working with you and open to new opportunities. However, if you
-            have other request or question, drop a message!
+            Thank you for visiting my website. I love meeting new people and would be delighted to speak with you too. If you would like to contact me, please fill out the form below or <a href="mailto:atulg12221@gmail.com" style="color: white;">send me an email</a>. I'll get back to you as soon as possible.
           </div>
           <form class="form-inline" id="contact-form">
             <div class="row my-3">
@@ -427,10 +431,10 @@
               <input id="subject" type="text" class="form-control" size="100" placeholder="Subject" required />
             </div>
             <div class="form-group my-3">
-              <textarea id="message" type="text" class="form-control texthover" rows="5" placeholder="Your message goes here." required></textarea>
+              <textarea id="message" type="text" class="form-control texthover" rows="7" placeholder="Your message goes here." required></textarea>
             </div>
             <button type="submit" class="btn btn-outline-light" id="submit">
-                Send Message
+              <i class="bi bi-send-fill"></i> Send
               </button>
         
           </form>
@@ -438,7 +442,11 @@
       </div>
     </div>
   </section>
-
+  <footer id="sticky-footer" class="flex-shrink-0 py-4 text-white-50">
+    <div class="container text-center">
+      <small>Copyright &copy; atulguptx.com | Made by: Atul Gupta</small>
+    </div>
+  </footer>
   <!--jQuery, Popper.js, Bootstrap JS-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
