--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
-  <link rel="icon" href="../resources/Images/favicon.png">
+  <link rel="icon" href="resources/Images/favicon.png">
   <!--My CSS-->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="src/style.css">
   <script
 			type="text/javascript"
 			src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
@@ -57,7 +57,7 @@
         <div class="container my-5 text-white description">
           <h1 class="name">Hi, I am Atul!</h1>
           <div>
-            <img src="../resources/Images/mypic.png" alt="MyPicDidNotLoad:( " class="mypic">
+            <img src="resources/Images/mypic.png" alt="MyPicDidNotLoad:( " class="mypic">
           </div>
           <div class="nametag">a developer.</div>
           <div class="content-center">
@@ -464,7 +464,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <!--Custom JS-->
-  <script src="main.js"></script>
+  <script src="src/main.js"></script>
 </body>
 
 </html>
