--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                     <a class="nav-link" href="#work">Experience</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#projects">Projects</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#awards">Achievements</a>
                 </li>
                 <li class="nav-item">
@@ -67,7 +70,7 @@
 
 <!-- About -->
 <section class="pt-5" id="about">
-    <div class="container-fluid row py-2 align-items-center justify-content-center animate__animated animate__fadeIn">
+    <div class="container-fluid row py-2 align-items-center justify-content-center animate__animated">
         <div class="col-12 col-md-8">
             <div class="container my-5 text-white description">
                 <h1 class="name">Hi, I am Atul!</h1>
@@ -98,7 +101,7 @@
 
 <!-- Skills -->
 <section class="pt-5" id="skills">
-    <div class="container">
+    <div class="container py-4">
         <div class="text-center mb-5">
             <h2 class="custom-head display-5">My Skills</h2>
         </div>
@@ -268,7 +271,7 @@
 
 <!-- Work -->
 <section class="pt-5" id="work">
-    <div class="container-fluid row py-5">
+    <div class="container-fluid row py-4">
         <div class="display-5 pt-3"><span class="custom-head">My Experience</span></div>
         <div class="timeline-container">
             <ul class="timeline">
@@ -326,85 +329,110 @@
     </div>
 </section>
 
+<!--Projects-->
+<section class="pt-5" id="projects">
+    <div class="container py-4">
+        <div class="display-5 pt-3 mb-5"><span class="custom-head">My Work</span></div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card mb-4 project-card"
+                     onclick="window.open('https://github.com/AT-GUPTA/MindA.I.lytics', '_blank')">
+                    <img alt="MindA.I.lytics" class="card-img-top project-thumbnail" src="resources/Images/mindai.png">
+                    <div class="card-body">
+                        <h5 class="card-title">MindA.I.lytics <i class="bi bi-box-arrow-up-right"></i></h5>
+                        <p class="card-text">Stack: PyTorch, Python, Scikit-learn</p>
+                        <p class="card-description">Developed a PyTorch-based CNN for facial emotion recognition,
+                            achieving 91% accuracy with a dataset of 2,200 images.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-4 project-card"
+                     onclick="window.open('https://github.com/AT-GUPTA/StreamSight-Stream-Recommendation-Engine', '_blank')">
+                    <img alt="SteamSight" class="card-img-top project-thumbnail" src="resources/Images/streamsight.png">
+                    <div class="card-body">
+                        <h5 class="card-title">SteamSight <i class="bi bi-box-arrow-up-right"></i></h5>
+                        <p class="card-text">Stack: Apache Spark, ALS, Python, Big Data, SQL</p>
+                        <p class="card-description">Engineered a big data solution for game recommendations using Apache
+                            Spark and ALS, processing 2 million records.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-4 project-card"
+                     onclick="window.open('https://github.com/AT-GUPTA/Elektromart', '_blank')">
+                    <img alt="Elektromart" class="card-img-top project-thumbnail"
+                         src="resources/Images/elektromart.png">
+                    <div class="card-body">
+                        <h5 class="card-title">Elektromart <i class="bi bi-box-arrow-up-right"></i></h5>
+                        <p class="card-text">Stack: Java, Spring Boot,React, AWS RDS</p>
+                        <p class="card-description">Developed an online electronics store with React and Java,
+                            incorporating JWT and role-based access control, backed by AWS RDS.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-4 project-card"
+                     onclick="window.open('https://github.com/AT-GUPTA/Softweavers', '_blank')">
+                    <img alt="Eternity" class="card-img-top project-thumbnail" src="resources/Images/eternity.png">
+                    <div class="card-body">
+                        <h5 class="card-title">Eternity <i class="bi bi-box-arrow-up-right"></i></h5>
+                        <p class="card-text">Stack: Spring Boot, Node.js</p>
+                        <p class="card-description">Built a scientific calculator web app with Spring Boot and Node.js,
+                            capable of complex equation parsing and maintaining a calculation history.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <!-- Awards -->
 <section class="pt-5" id="awards">
-    <div class="container-fluid row py-5">
-        <div class="display-5 pt-3"><span class="custom-head">Achievements</span></div>
-        <div class="timeline-container">
-            <ul class="list-group mt-4 ms-1 row">
-                <li class="list-group-item bg-transparent text-light">
-                    <div class="my-0">
-                        <hr>
-                        <table class="custom-head">
-                            <tr>
-                                <td>
-                                    <h3><i class="bi bi-award-fill"> </i></h3>
-                                </td>
-                                <td>
-                                    <h3> Bachelors in Computer Science, Concordia University</h3>
-                                </td>
-                            <tr>
-                                <td></td>
-                                <td>
-                                    <h5>2021-24 | GPA 4.00</h5>
-                                </td>
-                            </tr>
-                        </table>
-                        <hr>
-                        <table class="custom-head">
-                            <tr>
-                                <td>
-                                    <h3><i class="bi bi-award-fill"> </i></h3>
-                                </td>
-                                <td>
-                                    <h3> Dean's List Award, Concordia University</h3>
-                                </td>
-                            <tr>
-                                <td></td>
-                                <td>
-                                    <h5>Academic Year: 2021-22 </h5>
-                                </td>
-                            </tr>
-                        </table>
-                        <hr>
-                        <table class="custom-head">
-                            <tr>
-                                <td>
-                                    <h3><i class="bi bi-award-fill"> </i></h3>
-                                </td>
-                                <td>
-                                    <h3> Concordia University International Entrance Scholar</h3>
-                                </td>
-                            <tr>
-                                <td></td>
-                                <td>
-                                    <h5>Academic Years: 2021-23 </h5>
-                                </td>
-                            </tr>
-                        </table>
-                        <hr>
-
-                        <table class="custom-head">
-                            <tr>
-                                <td>
-                                    <h3><i class="bi bi-award-fill"> </i></h3>
-                                </td>
-                                <td>
-                                    <h3> SAT Subject Tests | 2020</h3>
-                                </td>
-                            <tr>
-                                <td></td>
-                                <td>
-                                    <h5>Mathematics II: 800/800<br> Physics: 800/800 </h5>
-                                </td>
-
-                            </tr>
-                        </table>
-                        <hr>
+    <div class="container py-1">
+        <div class="display-5 pt-3 text-center mb-5"><span class="custom-head">Achievements</span></div>
+        <div class="row award-container">
+            <div class="col-12">
+                <div class="list-group">
+                    <div class="list-group-item bg-transparent text-light award-item border border-secondary">
+                        <div class="d-flex align-items-center">
+                            <i class="bi bi-award-fill me-3" style="font-size: 2rem;"></i>
+                            <div>
+                                <h3>Bachelors in Computer Science, Concordia University</h3>
+                                <h5 class="text-start">2021-24 | GPA 3.90</h5>
+                            </div>
+                        </div>
                     </div>
-                </li>
-            </ul>
+                    <div class="list-group-item bg-transparent text-light award-item border border-secondary">
+                        <div class="d-flex align-items-center">
+                            <i class="bi bi-award-fill me-3" style="font-size: 2rem;"></i>
+                            <div>
+                                <h3>Dean's List Award, Concordia University</h3>
+                                <h5 class="text-start">Academic Year: 2021-22</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list-group-item bg-transparent text-light award-item border border-secondary">
+                        <div class="d-flex align-items-center">
+                            <i class="bi bi-award-fill me-3" style="font-size: 2rem;"></i>
+                            <div>
+                                <h3>Concordia University International Entrance Scholar</h3>
+                                <h5 class="text-start">Academic Years: 2021-23</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list-group-item bg-transparent text-light award-item border border-secondary">
+                        <div class="d-flex align-items-center">
+                            <i class="bi bi-award-fill me-3" style="font-size: 2rem;"></i>
+                            <div>
+                                <h3>SAT Subject Tests | 2020</h3>
+                                <h5 class="text-start">Mathematics II: 800/800<br>Physics: 800/800</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -414,8 +442,8 @@
 <section class="pt-5" id="contact">
     <div>
         <div class="container-fluid row py-5">
-            <div class="display-5 pt-3"><span class="custom-head">Contact Me</span></div>
-            <div class="form-container">
+            <div class="display-5 pt-3"><span class="custom-head">Get in Touch</span></div>
+            <div class="form-container animate__animated">
                 <div class="lead text-white mt-4 fs-5">
                     Thank you for visiting my website. I love meeting new people and would be delighted to speak with
                     you too. If you would like to contact me, please fill out the form below or <a
@@ -440,11 +468,12 @@
                         <input class="form-control" id="subject" placeholder="Subject" required size="100" type="text"/>
                     </div>
                     <div class="form-group my-3">
-                        <textarea class="form-control texthover" id="message" placeholder="Your message goes here."
+                        <textarea class="form-control texthover" id="message"
+                                  placeholder="I'd love to hear from you. Share your thoughts here."
                                   required
                                   rows="7" type="text"></textarea>
                     </div>
-                    <button class="btn btn-outline-light" id="submit" type="submit">
+                    <button class="btn btn-outline-light mt-2 btn-lg" id="submit" type="submit">
                         <i class="bi bi-send-fill"></i> Send
                     </button>
 
@@ -453,12 +482,14 @@
         </div>
     </div>
 </section>
+
 <footer class="flex-shrink-0 py-4 text-white-50" id="sticky-footer">
     <div class="container text-center">
         <small>Copyright &copy; atulguptx.com | Made by: Atul Gupta</small>
     </div>
 </footer>
 <!-- jQuery, Popper.js, Bootstrap JS -->
+<script crossorigin="anonymous" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script crossorigin="anonymous" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script crossorigin="anonymous"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
