Changed project repo link

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card mb-4 project-card"
-                     onclick="window.open('https://github.com/AT-GUPTA/MindA.I.lytics', '_blank')">
+                     onclick="window.open('https://github.com/AT-GUPTA/MindAILytics-Facial-Emotion-Recognition', '_blank')">
                     <img alt="MindA.I.lytics" class="card-img-top project-thumbnail" src="resources/Images/mindai.png">
                     <div class="card-body">
                         <h5 class="card-title">MindA.I.lytics <i class="bi bi-box-arrow-up-right"></i></h5>
